# camel-ai

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LAUNCH.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  publish.yml
docs/: index.html
integrations/claude/agents/: ui-tester.md
integrations/claude/skills/ui-test/: SKILL.md
src/camel/: __init__.py  agent.py  app.py  browser.py  cli.py  config.py  dashboard.py  desktop.py  desktop_linux.py  desktop_mac.py  findings.py  notifiers.py  report.py  runner.py  scheduler.py  server.py  vision.py  whatsapp.py
src/uiscout/: __init__.py  agent.py  app.py  browser.py  cli.py  config.py  desktop.py  desktop_linux.py  desktop_mac.py  driver.py  enrich.py  findings.py  handoff.py  notifiers.py  report.py  runner.py  server.py  vision.py
tests/: fixture.html  login_fixture.html  test_browser.py  test_dashboard.py  test_enrich.py  test_login.py  test_provider.py  test_report.py  test_scheduler.py
