[project]
name = "uiscout"
version = "0.1.0"
description = "MCP server that lets your AI open a browser and audit a web app's UI/UX like a human tester."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "playwright>=1.44.0",
]

[project.scripts]
uiscout = "uiscout.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uiscout"]
