[project]
name = "uiscout"
version = "0.1.0"
description = "MCP server that lets your AI open a browser and audit a web app's UI/UX like a human tester."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "playwright>=1.44.0",
]

[project.optional-dependencies]
desktop = ["uiautomation>=2.0.18; sys_platform == 'win32'"]
vision = ["pyautogui>=0.9.54", "pillow>=10.0.0"]
credentials = ["keyring>=24.0.0"]
all = [
    "uiautomation>=2.0.18; sys_platform == 'win32'",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
    "keyring>=24.0.0",
]

[project.scripts]
uiscout = "uiscout.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uiscout"]
