[project]
name = "uiscout"
version = "0.1.0"
description = "AI-driven UI/UX automation & testing. Drives any software through its real UI (web, desktop, or pixels) — no target-app API required."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "playwright", "ui-testing", "automation", "ux", "qa",
            "ui-automation", "computer-use", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "playwright>=1.44.0",
]

[project.optional-dependencies]
desktop = ["uiautomation>=2.0.18; sys_platform == 'win32'"]
desktop-mac = ["atomacos>=3.3.0; sys_platform == 'darwin'"]
desktop-linux = ["pyatspi>=2.38; sys_platform == 'linux'"]
vision = ["pyautogui>=0.9.54", "pillow>=10.0.0"]
credentials = ["keyring>=24.0.0"]
all = [
    "uiautomation>=2.0.18; sys_platform == 'win32'",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
    "keyring>=24.0.0",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/yourname/uiscout"
Issues = "https://github.com/yourname/uiscout/issues"

[project.scripts]
uiscout = "uiscout.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uiscout"]
